備考欄プレビューのデフォを空欄に

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div id="price-card">
                 <div class="card-row title-row" id="preview-title">商品タイトル</div>
                 <div class="card-row condition-row" id="preview-condition">中古　現状渡し</div>
-                <div class="card-row notes-row" id="preview-notes">備考欄</div>
+                <div class="card-row notes-row" id="preview-notes"></div>
                 <div class="card-row price-row" id="preview-price">¥1,000</div>
                 <svg id="barcode"></svg>
                 <div id="timestamp"></div>
@@ -45,7 +45,7 @@
             </div>
             <div class="form-group">
                 <label for="notes">備考:</label>
-                <textarea id="notes" rows="2" placeholder="備考欄"></textarea>
+                <textarea id="notes" rows="2" placeholder="備考"></textarea>
             </div>
             <div class="form-group">
                 <label for="notes-font-size">備考 文字サイズ (px):</label>
