--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
             </div>
             <div class="form-group">
                 <label for="title-font-size">タイトル文字サイズ (px):</label>
-                <input type="number" id="title-font-size" value="50" min="10" max="100">
+                <input type="range" id="title-font-size" value="50" min="10" max="100">
+                <span id="title-font-size-value">50</span> px
             </div>
             <div class="form-group">
                 <label for="condition">状態:</label>
@@ -49,7 +50,8 @@
             </div>
             <div class="form-group">
                 <label for="notes-font-size">備考 文字サイズ (px):</label>
-                <input type="number" id="notes-font-size" value="30" min="8" max="50">
+                <input type="range" id="notes-font-size" value="20" min="8" max="30">
+                <span id="notes-font-size-value">14</span> px
             </div>
             <div class="form-group">
                 <label for="price">金額 (円):</label>
