--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                 <span id="notes-font-size-value">14</span> px
             </div>
             <div class="form-group">
-                <label for="price">金額 (円):</label>
-                <input type="number" id="price" value="1100" min="0">
+                <label for="price">金額 (税込):</label>
+                <input type="number" id="price" placeholder="税込金額を入力"value="" min="0">
             </div>
             <button type="button" id="print-button">印刷</button>
 
