--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
     <script src="https://cdn.jsdelivr.net/npm/jsbarcode@3.11.5/dist/JsBarcode.all.min.js"></script>
 </head>
 <body>
-
+    <header class="site-header">
+        <div class="logo-container">
+            <!-- ロゴ画像をここに入れるか、テキストロゴにします -->
+            <!-- 例: 画像の場合 -->
+            <img src="images/logo.png" alt="サイトロゴ" class="site-logo">
+            <!-- 例: テキストロゴの場合 -->
+            <!-- <span class="site-logo-text">ロゴ</span> -->
+        </div>
+        <h1 class="site-title">プライスカード</h1>
+    </header>
     <div class="container">
        <!--<h1>プライスカード プレビュー</h1> -->
         <div id="preview-container">
