--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="logo-container">
             <img src="images/logo.png" alt="サイトロゴ" class="site-logo">
         </div>
-        <h1 class="site-title">プライスカード</h1>
+        <h1 class="site-title"></h1>
     </header>
     <div class="container">
         <div id="preview-container">
