フォームのデザインの調整

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="logo-container">
             <img src="images/logo.png" alt="サイトロゴ" class="site-logo">
         </div>
-        <h1 class="site-title"></h1>
+        <h1 class="site-title">事務所プライス</h1>
     </header>
     <div class="container">
         <div id="preview-container">
@@ -33,7 +33,7 @@
         <!-- <h2>入力フォーム</h2> -->
         <form id="input-form">
             <div class="form-group">
-                <label for="title">商品タイトル:</label>
+                <label for="title">商品タイトル</label>
                 <!-- list属性とdatalistを削除 -->
                 <div class="title-input-container"> <!-- ★ 履歴リストの位置決め用コンテナ -->
                     <input type="text" id="title" name="title" placeholder="商品タイトル" autocomplete="off"> <!-- autocompleteをoffに -->
@@ -43,9 +43,9 @@
                 </datalist>
             </div>
             <div class="form-group">
-                <label for="title-font-size">タイトル文字サイズ (px):</label>
-                <input type="range" id="title-font-size" value="50" min="10" max="100">
-                <span id="title-font-size-value">50</span> px
+                <label for="title-font-size">タイトル文字サイズ</label>
+                <input type="range" id="title-font-size" value="50" min="10" max="80">
+                <!--<span id="title-font-size-value">50</span> px -->
             </div>
             <div class="form-group">
                 <label for="condition">状態:</label>
@@ -55,16 +55,16 @@
                 </select>
             </div>
             <div class="form-group">
-                <label for="notes">備考:</label>
+                <label for="notes">備考</label>
                 <textarea id="notes" rows="2" placeholder="備考"></textarea>
             </div>
             <div class="form-group">
-                <label for="notes-font-size">備考 文字サイズ (px):</label>
+                <label for="notes-font-size">備考 文字サイズ</label>
                 <input type="range" id="notes-font-size" value="20" min="8" max="30">
-                <span id="notes-font-size-value">14</span> px
+                <!-- <span id="notes-font-size-value">14</span> px -->
             </div>
             <div class="form-group">
-                <label for="price">金額 (税込):</label>
+                <label for="price">金額 (税込)</label>
                 <input type="number" id="price" placeholder="税込金額を入力"value="" min="0">
             </div>
             <button type="button" id="print-button">印刷</button>
