--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="form-group">
                 <label for="title-font-size">タイトル文字サイズ</label>
                 <input type="range" id="title-font-size" value="50" min="10" max="80">
-                <!--<span id="title-font-size-value">50</span> px -->
+                <span id="title-font-size-value">50</span> px
             </div>
             <div class="form-group">
                 <label for="condition">状態:</label>
@@ -61,7 +61,7 @@
             <div class="form-group">
                 <label for="notes-font-size">備考 文字サイズ</label>
                 <input type="range" id="notes-font-size" value="20" min="8" max="30">
-                <!-- <span id="notes-font-size-value">14</span> px -->
+                 <span id="notes-font-size-value">14</span> px 
             </div>
             <div class="form-group">
                 <label for="price">金額 (税込)</label>
